# lockbox

./: .gitignore  Cargo.toml  Makefile  README.md  diceware.wordlist.asc
lockbox_cli/: Cargo.toml
lockbox_cli/src/: main.rs
lockbox_cli/src/password/: mod.rs
lockbox_lib/: Cargo.toml
lockbox_lib/src/: lib.rs
lockbox_lib/src/constants/: mod.rs
lockbox_lib/src/encryption/: mod.rs
lockbox_lib/src/storage/: account.rs  mod.rs
lockbox_lib/tests/: encryption_test.rs  storage_test.rs
lockbox_server/: .gitignore  README.md  mix.exs
lockbox_server/config/: config.exs  dev.exs  prod.exs  releases.exs
lockbox_server/lib/: lockbox_server.ex
lockbox_server/lib/lockbox_server/: application.ex  datastore.ex  lockbox_lib.ex  syncronizer.ex
lockbox_server/lib/lockbox_server/cluster/: connection.ex  gossip.ex  strategy.ex
lockbox_server/lib/lockbox_server/sync/: sync_manager.ex
lockbox_server/native/lockbox_interface/: Cargo.toml  README.md
lockbox_server/native/lockbox_interface/src/: lib.rs
lockbox_server/rel/: env.sh.eex
lockbox_server/test/: lockbox_server_test.exs
src/: main.rs
src/encryption/: mod.rs
src/storage/: mod.rs
