[package]
name = "lockbox_lib"
version = "0.1.0"
authors = ["Matt Silbernagel <silbermm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
sodiumoxide = "0.2.5"
dirs = "2.0"
rusqlite = "0.21.0"
